resolved issue related to cors error